@@ -1,3 +1,8 @@
+spotpackage 0.18.13:
+
+- listgenerator.py:
+    - New class class ListGenerator:
+
 spotpython 0.18.11:
 
 - testmodel, predictmodel, and cvmodel functions updated, so that they can handle DataModules specified by the user in fun_control.
